name:                hexif
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Frederick Bernard Dubois
maintainer:          fred.dubois@gmail.com
-- copyright:
category:            Utility
build-type:          Simple
cabal-version:       >=1.8

executable hexif
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -W
--  ghc-options:         -W -Werror
  build-depends:
      base >= 4
    , binary
    , bytestring
    , directory
    , filepath
    , mtl
    , old-locale
    , text
    , time

-- vim: et sts=4 ts=4 sw=4
